--- a/taiko-web.conf
+++ b/taiko-web.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    www.pokitech.com
+    www.pokitech.com;
 
     location / {
         proxy_set_header X-Real-IP $remote_addr;
